--- a/css/style.scss
+++ b/css/style.scss
@@ -20,15 +20,17 @@
 .pjct-cont{
   background-color: aquamarine;
   .pjct-box:first-child{
+    min-height: 350px;
     margin-top: 20px;
   }
   .pjct-box{
     background-color: azure;
     min-height: 350px;
-    max-width: 500px;
     margin: 10px 0 10px 0;
+    max-width: 96%;
   }
   .pjct-box:last-child{
+    min-height: 350px;
     margin-bottom: 20px;
   }
 }
