--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,14 @@ body {
   padding: 0; }
 
 .hdr-cont {
-  background-color: aqua;
-  min-height: 350px; }
-  .hdr-cont h1,
+  background-color: aqua; }
+  .hdr-cont h1 {
+    padding: 50px 0 20px 0; }
   .hdr-cont h3:last-child {
     padding: 20px; }
+  .hdr-cont .hdr-cover {
+    max-height: 650px;
+    padding: 20px 0 20px 0; }
 
 .sub-hdr {
   background-color: aquamarine;
