--- a/css/style.scss
+++ b/css/style.scss
@@ -41,8 +41,11 @@ body{
 
 .sub-hdr{
   background-color: aquamarine;
-  h2{
+  .info-skills{
     padding: 20px 0 20px 0;
+    h2{
+      border-bottom: 7px solid #00FFFF;
+    }
   }
   .sub-cover{
     img{
@@ -65,9 +68,12 @@ body{
 }
 
 .pjct-title{
-  background-color: aqua;
-  h2{
+  background-color: blanchedalmond;
+  .projects{
     padding: 20px 0 20px 0;
+    h2{
+      border-bottom: 7px solid #00FFFF;
+    }
   }
 }
 
@@ -82,6 +88,8 @@ body{
     min-height: 350px;
     margin: 10px 0 10px 0;
     max-width: 96%;
+    border: 7px solid #00FFFF;
+    border-radius: 20px;
   }
   .pjct-box:last-child{
     min-height: 350px;
