--- a/css/style.scss
+++ b/css/style.scss
@@ -19,6 +19,10 @@ body{
     font-weight: bold;
     font-size: 1.3em;
   }
+  h4{
+    font-weight: normal;
+    font-size: 2.3em;
+  }
 }
 
 .nav-cont{
@@ -80,7 +84,6 @@ body{
 .pjct-cont{
   background-color: aquamarine;
   .pjct-box:first-child{
-    min-height: 350px;
     margin-top: 20px;
   }
   .pjct-box{
@@ -89,10 +92,22 @@ body{
     margin: 10px 0 10px 0;
     max-width: 96%;
     border: 7px solid #00FFFF;
-    border-radius: 20px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    .pjct-back{
+      background:
+        linear-gradient(to top, transparent, rgb(88, 164, 160) 250%),
+        url(../assets/images/moto-rockt-feed.png) no-repeat;
+      background-color: black;
+      background-position: 50% 0;
+      background-size: cover;
+      min-height: 300px;
+    }
+    .pjct-content{
+      min-height: 300px;
+    }
   }
   .pjct-box:last-child{
-    min-height: 350px;
     margin-bottom: 20px;
   }
 }
