--- a/css/style.scss
+++ b/css/style.scss
@@ -95,13 +95,30 @@ body{
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     .pjct-back{
+      transition: background-color 500ms linear;
+      padding: 0;
+      .bckg-img{
+        background: 
+          linear-gradient(to top, transparent, rgb(45, 100, 126) 150%),
+          url(../assets/images/mock-rockt-mx.png) no-repeat;
+        background-color: rgb(68, 68, 68);
+        background-position: 50% 0;
+        background-size: cover;
+        transition: opacity 1s ease-in-out;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .pjct-back:hover {
       background:
-        linear-gradient(to top, transparent, rgb(88, 164, 160) 250%),
-        url(../assets/images/moto-rockt-feed.png) no-repeat;
-      background-color: black;
+        linear-gradient(to top, transparent, rgb(45, 100, 126) 150%),
+        url(../assets/images/mob-mock-rockt-mx.png) no-repeat;
+      background-color: rgb(68, 68, 68);
       background-position: 50% 0;
       background-size: cover;
-      min-height: 300px;
+      .bckg-img{
+        opacity: 0;
+      }
     }
     .pjct-content{
       min-height: 300px;
