--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
     .pjct-cont .pjct-box .pjct-back {
-      transition: background-color 500ms linear;
+      background-color: #444444;
       padding: 0; }
       .pjct-cont .pjct-box .pjct-back .bckg-img {
         background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-rockt-mx.png) no-repeat;
