--- a/css/style.scss
+++ b/css/style.scss
@@ -95,7 +95,7 @@ body{
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     .pjct-back{
-      transition: background-color 500ms linear;
+      background-color: rgb(68, 68, 68);
       padding: 0;
       .bckg-img{
         background: 
