--- a/css/style.scss
+++ b/css/style.scss
@@ -88,13 +88,16 @@ body{
   }
   .pjct-box{
     background-color: azure;
-    min-height: 350px;
     margin: 10px 0 10px 0;
     max-width: 96%;
-    border: 7px solid #00FFFF;
-    border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     .pjct-back{
+      border: 7px solid #00FFFF;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      min-height: 400px;
       background-color: rgb(68, 68, 68);
       padding: 0;
       .bckg-img{
@@ -121,7 +124,41 @@ body{
       }
     }
     .pjct-content{
-      min-height: 300px;
+      border: 7px solid rgb(21, 116, 116);
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
+      h4,
+      p{
+        text-align: justify;
+        padding-bottom: 20px;
+      }
+      padding: 20px;
+      .pjct-skills{
+        padding-top: 10px;
+        .skill-logo{
+          font-family: 'Roboto Condensed', sans-serif;
+          text-transform: uppercase;
+          border-radius: 5px;
+          padding: 2px;
+          margin: 7.5px;
+          .skill-svg{
+            height: 40px;
+            width: 40px;
+            margin: 2px 20px 2px 20px;
+          }
+        }
+      }
+      .pjct-links{
+        padding-top: 10px;
+        .skill-link{
+          border: 1px solid black;
+          border-radius: 5px;
+          padding: 2px;
+          margin: 3px;
+        }
+      }
     }
   }
   .pjct-box:last-child{
