--- a/css/style.css
+++ b/css/style.css
@@ -57,87 +57,96 @@ body {
     .pjct-title .projects h2 {
       border-bottom: 7px solid #00FFFF; }
 
-.pjct-cont {
-  background-color: aquamarine; }
-  .pjct-cont .pjct-box:first-child {
-    margin-top: 20px; }
-  .pjct-cont .pjct-box {
-    background-color: azure;
-    margin: 10px 0 10px 0;
-    max-width: 96%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-    .pjct-cont .pjct-box .pjct-back {
-      border: 7px solid #00FFFF;
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      background-color: #444444;
-      padding: 0; }
-      .pjct-cont .pjct-box .pjct-back .bckg-img {
-        background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-rockt-mx.png) no-repeat;
-        background-color: #444444;
-        background-position: 50% 0;
-        background-size: cover;
-        transition: opacity 1s ease-in-out;
-        width: 100%;
-        height: 100%; }
-    .pjct-cont .pjct-box .pjct-back:hover {
-      background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mob-mock-rockt-mx.png) no-repeat;
+.pjct-cont .pjct-box:first-child {
+  margin-top: 20px; }
+.pjct-cont .radius-r {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px; }
+.pjct-cont .radius-l {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0; }
+.pjct-cont .pjct-box {
+  margin: 10px 0 10px 0;
+  max-width: 96%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+  .pjct-cont .pjct-box .pjct-back {
+    background-color: #444444;
+    padding: 0; }
+    .pjct-cont .pjct-box .pjct-back .bckg-img {
+      background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-rockt-mx.png) no-repeat;
       background-color: #444444;
       background-position: 50% 0;
-      background-size: cover; }
-      .pjct-cont .pjct-box .pjct-back:hover .bckg-img {
-        opacity: 0; }
-    .pjct-cont .pjct-box .pjct-content {
-      border: 7px solid #157474;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-      padding: 20px; }
-      .pjct-cont .pjct-box .pjct-content h4 {
+      background-size: cover;
+      transition: opacity 1s ease-in-out;
+      width: 100%;
+      height: 100%; }
+  .pjct-cont .pjct-box .pjct-back:hover {
+    background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mob-mock-rockt-mx.png) no-repeat;
+    background-color: #444444;
+    background-position: 50% 0;
+    background-size: cover; }
+    .pjct-cont .pjct-box .pjct-back:hover .bckg-img {
+      opacity: 0; }
+  .pjct-cont .pjct-box .brdr-bckg-l-txt-r {
+    border: 7px solid #157474;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px; }
+  .pjct-cont .pjct-box .brdr-txt-l-bckg-r {
+    border: 7px solid #157474;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0; }
+  .pjct-cont .pjct-box .pjct-content {
+    padding: 20px; }
+    .pjct-cont .pjct-box .pjct-content h4 {
+      font-family: 'Roboto Condensed', sans-serif;
+      text-transform: uppercase; }
+    .pjct-cont .pjct-box .pjct-content h4,
+    .pjct-cont .pjct-box .pjct-content p {
+      text-align: justify;
+      padding-bottom: 15px; }
+    .pjct-cont .pjct-box .pjct-content .pjct-skills {
+      padding-top: 10px; }
+      .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo {
         font-family: 'Roboto Condensed', sans-serif;
-        text-transform: uppercase; }
-      .pjct-cont .pjct-box .pjct-content h4,
-      .pjct-cont .pjct-box .pjct-content p {
-        text-align: justify;
-        padding-bottom: 15px; }
-      .pjct-cont .pjct-box .pjct-content .pjct-skills {
-        padding-top: 10px; }
-        .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo {
-          font-family: 'Roboto Condensed', sans-serif;
-          text-transform: uppercase;
-          border-radius: 5px;
-          padding: 2px;
-          margin: 7.5px; }
-          .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo .skill-svg {
-            height: 40px;
-            width: 40px;
-            margin: 2px 20px 2px 20px;
-            padding-bottom: 5px; }
-          .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo .skill-svg:hover {
-            height: 50px;
-            width: 50px;
-            margin: -5px 15px -4px 15px;
-            padding-bottom: 10px; }
-      .pjct-cont .pjct-box .pjct-content .pjct-links {
-        padding-top: 10px; }
-        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link {
-          border: 1px solid #c1c1c1;
-          border-radius: 5px;
-          margin: 3px 10px 3px 10px; }
-          .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button {
-            background-color: antiquewhite;
-            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75); }
-            .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button a {
-              text-transform: uppercase;
-              color: black;
-              text-decoration: none; }
-          .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button:hover {
-            background-color: #b8ab9b; }
-  .pjct-cont .pjct-box:last-child {
-    margin-bottom: 20px; }
+        text-transform: uppercase;
+        border-radius: 5px;
+        padding: 2px;
+        margin: 7.5px; }
+        .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo .skill-svg {
+          height: 40px;
+          width: 40px;
+          margin: 2px 20px 2px 20px;
+          padding-bottom: 5px; }
+        .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo .skill-svg:hover {
+          height: 50px;
+          width: 50px;
+          margin: -5px 15px -4px 15px;
+          padding-bottom: 10px; }
+    .pjct-cont .pjct-box .pjct-content .pjct-links {
+      padding-top: 10px; }
+      .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link {
+        border: 1px solid #c1c1c1;
+        border-radius: 5px;
+        margin: 3px 10px 3px 10px; }
+        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button {
+          background-color: antiquewhite;
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75); }
+          .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button a {
+            text-transform: uppercase;
+            color: black;
+            text-decoration: none; }
+        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button:hover {
+          background-color: #b8ab9b; }
+.pjct-cont .pjct-box:last-child {
+  margin-bottom: 20px; }
 
 .cntct-cont {
   background-color: aqua;
