--- a/css/style.css
+++ b/css/style.css
@@ -132,18 +132,25 @@ body {
     .pjct-cont .pjct-box .pjct-content .pjct-links {
       padding-top: 10px; }
       .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link {
-        border: 1px solid #c1c1c1;
-        border-radius: 5px;
         margin: 3px 10px 3px 10px; }
-        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button {
-          background-color: antiquewhite;
+        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .btn {
+          font-size: 1.5em;
+          font-weight: 900;
+          flex: 1 1 auto;
+          padding: 5px;
+          text-align: center;
+          text-transform: uppercase;
+          transition: 1s;
+          background-size: 200% auto;
+          color: black;
+          border-radius: 10px;
           box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75); }
-          .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button a {
-            text-transform: uppercase;
-            color: black;
-            text-decoration: none; }
-        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link button:hover {
-          background-color: #b8ab9b; }
+        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .btn:hover {
+          background-position: right center;
+          /* change the direction of the change here */
+          color: white; }
+        .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .btn-1 {
+          background-image: linear-gradient(to bottom right, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%); }
 .pjct-cont .pjct-box:last-child {
   margin-bottom: 20px; }
 
