--- a/css/style.css
+++ b/css/style.css
@@ -143,8 +143,7 @@ body {
           transition: 1s;
           background-size: 200% auto;
           color: black;
-          border-radius: 10px;
-          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75); }
+          border-radius: 5px; }
         .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .btn:hover {
           background-position: right center;
           /* change the direction of the change here */
