--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,10 @@ body {
   margin: 10px 0 10px 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
   .pjct-cont .pjct-box .pjct-back {
-    padding: 0; }
+    padding: 0;
+    background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mob-mock-rockt-mx.png) no-repeat;
+    background-position: 50% 0;
+    background-size: cover; }
     .pjct-cont .pjct-box .pjct-back .bckg-img {
       background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-rockt-mx.png) no-repeat;
       background-position: 50% 0;
@@ -81,12 +84,8 @@ body {
       transition: opacity 1s ease-in-out;
       width: 100%;
       height: 100%; }
-  .pjct-cont .pjct-box .pjct-back:hover {
-    background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mob-mock-rockt-mx.png) no-repeat;
-    background-position: 50% 0;
-    background-size: cover; }
-    .pjct-cont .pjct-box .pjct-back:hover .bckg-img {
-      opacity: 0; }
+  .pjct-cont .pjct-box .pjct-back:hover .bckg-img {
+    opacity: 0; }
   .pjct-cont .pjct-box .brdr-bckg-l-txt-r {
     border: 7px solid #157474;
     border-top-left-radius: 0;
