--- a/css/style.scss
+++ b/css/style.scss
@@ -187,9 +187,10 @@ body{
             color: white;
           }
           .link-svg{
-            height: 40px;
-            width: 40px;
+            height: 25px;
+            width: 25px;
             margin: 5px 5px 5px 5px;
+            padding-bottom: 5px;
           }
           .btn-1 {
             background-image: linear-gradient(to bottom right, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%);
