svgs addedo to links on go live and source code

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body {
       text-align: justify;
       padding-bottom: 15px; }
     .pjct-cont .pjct-box .pjct-content .pjct-skills {
+      width: 100%;
       padding-top: 10px; }
       .pjct-cont .pjct-box .pjct-content .pjct-skills .skill-logo {
         font-family: 'Roboto Condensed', sans-serif;
