--- a/css/style.scss
+++ b/css/style.scss
@@ -145,6 +145,7 @@ body{
       }
       padding: 20px;
       .pjct-skills{
+        width: 100%;
         padding-top: 10px;
         .skill-logo{
           font-family: 'Roboto Condensed', sans-serif;
