--- a/css/style.scss
+++ b/css/style.scss
@@ -145,6 +145,9 @@ body{
       }
       padding: 20px;
       .pjct-skills{
+        div{
+          width: 100%;
+        }
         width: 100%;
         padding-top: 10px;
         .skill-logo{
