--- a/css/style.css
+++ b/css/style.css
@@ -72,19 +72,33 @@ body {
 .pjct-cont .pjct-box {
   margin: 10px 0 10px 0;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-  .pjct-cont .pjct-box .pjct-back {
+  .pjct-cont .pjct-box .pjct-back-rockt {
     padding: 0;
     background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mob-mock-rockt-mx.png) no-repeat;
     background-position: 50% 0;
     background-size: cover; }
-    .pjct-cont .pjct-box .pjct-back .bckg-img {
+    .pjct-cont .pjct-box .pjct-back-rockt .bckg-img-rockt {
       background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-rockt-mx.png) no-repeat;
       background-position: 50% 0;
       background-size: cover;
       transition: opacity 1s ease-in-out;
       width: 100%;
       height: 100%; }
-  .pjct-cont .pjct-box .pjct-back:hover .bckg-img {
+  .pjct-cont .pjct-box .pjct-back-rockt:hover .bckg-img-rockt {
+    opacity: 0; }
+  .pjct-cont .pjct-box .pjct-back-memb {
+    padding: 0;
+    background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-members.png) no-repeat;
+    background-position: 50% 0;
+    background-size: cover; }
+    .pjct-cont .pjct-box .pjct-back-memb .bckg-img-memb {
+      background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-members-2.png) no-repeat;
+      background-position: 50% 0;
+      background-size: cover;
+      transition: opacity 1s ease-in-out;
+      width: 100%;
+      height: 100%; }
+  .pjct-cont .pjct-box .pjct-back-memb:hover .bckg-img-memb {
     opacity: 0; }
   .pjct-cont .pjct-box .brdr-bckg-l-txt-r {
     border: 7px solid #157474;
