--- a/css/style.scss
+++ b/css/style.scss
@@ -192,6 +192,29 @@ body{
         opacity: 0;
       }
     }
+    .pjct-back-york{
+      padding: 0;
+      background:
+        linear-gradient(to top, transparent, rgb(45, 100, 126) 150%),
+        url(../assets/images/mock-york-1.png) no-repeat;
+      background-position: bottom;
+      background-size: 120%;
+      .bckg-img-york{
+        background: 
+          linear-gradient(to top, transparent, rgb(45, 100, 126) 150%),
+          url(../assets/images/mock-york-2.png) no-repeat;
+        background-position: 50% 0;
+        background-size: cover;
+        transition: opacity 1s ease-in-out;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .pjct-back-york:hover {
+      .bckg-img-york{
+        opacity: 0;
+      }
+    }
     .brdr-bckg-l-txt-r{
       border: 7px solid rgb(21, 116, 116);
       border-top-left-radius: 0;
