--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,20 @@ body {
       height: 100%; }
   .pjct-cont .pjct-box .pjct-back-york:hover .bckg-img-york {
     opacity: 0; }
+  .pjct-cont .pjct-box .pjct-back-apple {
+    padding: 0;
+    background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-apple-1.png) no-repeat;
+    background-position: 50% 0;
+    background-size: cover; }
+    .pjct-cont .pjct-box .pjct-back-apple .bckg-img-apple {
+      background: linear-gradient(to top, transparent, #2d647e 150%), url(../assets/images/mock-apple-2.png) no-repeat;
+      background-position: 75% 0;
+      background-size: cover;
+      transition: opacity 1s ease-in-out;
+      width: 100%;
+      height: 100%; }
+  .pjct-cont .pjct-box .pjct-back-apple:hover .bckg-img-apple {
+    opacity: 0; }
   .pjct-cont .pjct-box .brdr-bckg-l-txt-r {
     border: 7px solid #157474;
     border-top-left-radius: 0;
