--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,15 @@ body {
 
 .nav-cont {
   padding: 0; }
+  .nav-cont nav li a {
+    padding: 0;
+    font-size: 1.2rem;
+    transition: all 0.4s ease-in-out;
+    cursor: pointer;
+    margin-bottom: 2px; }
+  .nav-cont nav li a:hover {
+    border-bottom: 2px solid #373232;
+    margin-bottom: 0; }
 
 .hdr-cont {
   background-color: aqua;
