--- a/css/style.scss
+++ b/css/style.scss
@@ -38,6 +38,12 @@ body{
     border-bottom: 2px solid rgb(55, 50, 50);
     margin-bottom: 0;
   }
+  nav li{
+    margin: 5px 5px 5px 0;
+  }
+  nav button{
+    border: 0;
+  }
 }
 
 .hdr-cont{
