--- a/css/style.scss
+++ b/css/style.scss
@@ -117,6 +117,14 @@ body{
       border-bottom: 7px solid #00FFFF;
     }
   }
+  .cntct-info{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.cntct-cont{
+  min-height: 350px;
 }
 
 .pjct-cont{
@@ -359,11 +367,6 @@ body{
   .pjct-box:last-child{
     margin-bottom: 20px;
   }
-}
-
-.cntct-cont{
-  background-color: aqua;
-  min-height: 350px;
 }
 
 .footr-cont{
