--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,40 @@ body {
     padding: 20px 0 20px 0; }
     .pjct-title .projects h2 {
       border-bottom: 7px solid #00FFFF; }
-  .pjct-title .cntct-info {
-    width: 100%;
-    height: 100%; }
-
-.cntct-cont {
-  min-height: 350px; }
+  .pjct-title .cntct-info ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333; }
+    .pjct-title .cntct-info ul .cntct-link .btn {
+      font-size: 1.5em;
+      font-weight: 900;
+      flex: 1 1 auto;
+      text-align: center;
+      text-transform: uppercase;
+      transition: 1s;
+      background-size: 200% auto;
+      border-radius: 5px; }
+    .pjct-title .cntct-info ul .cntct-link .btn:hover {
+      background-position: right center;
+      /* change the direction of the change here */ }
+    .pjct-title .cntct-info ul .cntct-link .cntct-svg {
+      height: 40px;
+      width: 40px;
+      margin: 5px 5px 5px 5px; }
+    .pjct-title .cntct-info ul .cntct-link .btn-1 {
+      background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%); }
+    .pjct-title .cntct-info ul li {
+      float: left; }
+      .pjct-title .cntct-info ul li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 16px;
+        text-decoration: none; }
+      .pjct-title .cntct-info ul li a:hover {
+        background-color: #111111; }
 
 .pjct-cont .pjct-box:first-child {
   margin-top: 20px; }
@@ -242,15 +270,14 @@ body {
           border-radius: 5px; }
         .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .btn:hover {
           background-position: right center;
-          /* change the direction of the change here */
-          color: white; }
+          /* change the direction of the change here */ }
         .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .link-svg {
           height: 25px;
           width: 25px;
           margin: 5px 5px 5px 5px;
           padding-bottom: 5px; }
         .pjct-cont .pjct-box .pjct-content .pjct-links .skill-link .btn-1 {
-          background-image: linear-gradient(to bottom right, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%); }
+          background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%); }
 .pjct-cont .pjct-box:last-child {
   margin-bottom: 20px; }
 
