--- a/css/style.scss
+++ b/css/style.scss
@@ -118,13 +118,50 @@ body{
     }
   }
   .cntct-info{
-    width: 100%;
-    height: 100%;
+    ul{
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333333;
+      .cntct-link{
+        .btn {
+          font-size: 1.5em;
+          font-weight: 900;
+          flex: 1 1 auto;
+          text-align: center;
+          text-transform: uppercase;
+          transition: 1s;
+          background-size: 200% auto;
+          border-radius: 5px;
+         }
+        .btn:hover {
+          background-position: right center; /* change the direction of the change here */
+        }
+        .cntct-svg{
+          height: 40px;
+          width: 40px;
+          margin: 5px 5px 5px 5px;
+        }
+        .btn-1 {
+          background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%);
+        }
+      }
+      li{
+        float: left;
+        a{
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 16px;
+          text-decoration: none;
+        }
+        a:hover{
+          background-color: #111111;
+        }
+      }
+    }
   }
-}
-
-.cntct-cont{
-  min-height: 350px;
 }
 
 .pjct-cont{
@@ -349,7 +386,7 @@ body{
            }
           .btn:hover {
             background-position: right center; /* change the direction of the change here */
-            color: white;
+            //color: white;
           }
           .link-svg{
             height: 25px;
@@ -358,7 +395,7 @@ body{
             padding-bottom: 5px;
           }
           .btn-1 {
-            background-image: linear-gradient(to bottom right, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%);
+            background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%);
           }
         }
       }
