--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,14 @@ body {
     text-transform: uppercase; }
   body h3 {
     font-weight: bold;
-    font-size: 1.3em; }
+    font-size: 1.8em; }
   body h4 {
+    text-align: center;
+    text-transform: uppercase;
     font-weight: bold;
     font-size: 2.5em; }
+  body p {
+    font-size: 1.2em; }
 
 .nav-cont {
   padding: 0; }
@@ -67,6 +71,8 @@ body {
       max-height: 450px; }
   .sub-hdr .sub-txt {
     padding: 20px 20px 20px 20px; }
+    .sub-hdr .sub-txt h3 {
+      font-size: 1.5em; }
   .sub-hdr .bx-1 {
     background-color: blanchedalmond; }
   .sub-hdr .bx-2 {
@@ -80,40 +86,41 @@ body {
     padding: 20px 0 20px 0; }
     .pjct-title .projects h2 {
       border-bottom: 7px solid #00FFFF; }
+    .pjct-title .projects p {
+      font-size: 1.5em; }
   .pjct-title .cntct-info ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: #333333; }
-    .pjct-title .cntct-info ul .cntct-link .btn {
-      font-size: 1.5em;
-      font-weight: 900;
-      flex: 1 1 auto;
-      text-align: center;
-      text-transform: uppercase;
-      transition: 1s;
-      background-size: 200% auto;
-      border-radius: 5px; }
-    .pjct-title .cntct-info ul .cntct-link .btn:hover {
-      background-position: right center;
-      /* change the direction of the change here */ }
-    .pjct-title .cntct-info ul .cntct-link .cntct-svg {
-      height: 40px;
-      width: 40px;
-      margin: 5px 5px 5px 5px; }
-    .pjct-title .cntct-info ul .cntct-link .btn-1 {
-      background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%); }
-    .pjct-title .cntct-info ul li {
-      float: left; }
-      .pjct-title .cntct-info ul li a {
+    overflow: hidden; }
+    .pjct-title .cntct-info ul .cntct-link {
+      float: left;
+      margin: 15px 5px; }
+      .pjct-title .cntct-info ul .cntct-link .btn {
+        font-size: 1.5em;
+        font-weight: 900;
+        flex: 1 1 auto;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 1s;
+        background-size: 200% auto;
+        border-radius: 5px;
         display: block;
         color: white;
         text-align: center;
-        padding: 16px;
-        text-decoration: none; }
-      .pjct-title .cntct-info ul li a:hover {
+        padding: 6px;
+        text-decoration: none;
+        border: 0; }
+      .pjct-title .cntct-info ul .cntct-link .btn:hover {
+        background-position: right center;
+        /* change the direction of the change here */
         background-color: #111111; }
+      .pjct-title .cntct-info ul .cntct-link .cntct-svg {
+        height: 40px;
+        width: 40px;
+        margin: 5px 5px 5px 5px; }
+      .pjct-title .cntct-info ul .cntct-link .btn-1 {
+        background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%); }
 
 .pjct-cont .pjct-box:first-child {
   margin-top: 20px; }
@@ -228,7 +235,8 @@ body {
     border-bottom-right-radius: 0; }
   .pjct-cont .pjct-box .pjct-content {
     padding: 20px; }
-    .pjct-cont .pjct-box .pjct-content h4,
+    .pjct-cont .pjct-box .pjct-content h4 {
+      padding-bottom: 15px; }
     .pjct-cont .pjct-box .pjct-content p {
       text-align: justify;
       padding-bottom: 15px; }
