--- a/css/style.scss
+++ b/css/style.scss
@@ -24,11 +24,16 @@ body{
   }
   h3{
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 1.8em;
   }
   h4{
+    text-align: center;
+    text-transform: uppercase;
     font-weight: bold;
     font-size: 2.5em;
+  }
+  p{
+    font-size: 1.2em;
   }
 }
 
@@ -96,6 +101,9 @@ body{
     padding: 20px 0 20px 0;
   }
   .sub-txt{
+    h3{
+      font-size: 1.5em;
+    }
     padding: 20px 20px 20px 20px;
   }
   .bx-1{
@@ -116,6 +124,9 @@ body{
     h2{
       border-bottom: 7px solid #00FFFF;
     }
+    p{
+      font-size: 1.5em;
+    }
   }
   .cntct-info{
     ul{
@@ -123,8 +134,9 @@ body{
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #333333;
       .cntct-link{
+        float: left;
+        margin: 15px 5px;
         .btn {
           font-size: 1.5em;
           font-weight: 900;
@@ -134,9 +146,16 @@ body{
           transition: 1s;
           background-size: 200% auto;
           border-radius: 5px;
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 6px;
+          text-decoration: none;
+          border: 0;
          }
         .btn:hover {
           background-position: right center; /* change the direction of the change here */
+          background-color: #111111;
         }
         .cntct-svg{
           height: 40px;
@@ -145,19 +164,6 @@ body{
         }
         .btn-1 {
           background-image: linear-gradient(to top left, #FF3A00 0%, #ff3a00 15%, #10294c 82%, #10294C 100%);
-        }
-      }
-      li{
-        float: left;
-        a{
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 16px;
-          text-decoration: none;
-        }
-        a:hover{
-          background-color: #111111;
         }
       }
     }
@@ -336,7 +342,9 @@ body{
       border-bottom-right-radius: 0;
     }
     .pjct-content{
-      h4,
+      h4{
+        padding-bottom: 15px;
+      }
       p{
         text-align: justify;
         padding-bottom: 15px;
